--- a/style.css
+++ b/style.css
@@ -1,121 +1,184 @@
-                                                        * {
-                                                        box-sizing: border-box;
-                                                    }
-                                                    
-                                                    @font-face {
-                                                        font-family: 'customFont';
-                                                        src: url('./assets/fonts/beautyMountains.ttf');
-                                                    }
-                                                    
-                                                    html,
-                                                    body {
-                                                        padding: 0;
-                                                        margin: 0;
-                                                        font-family: 'Roboto Condensed', sans-serif;
-                                                    }
-                                                    
-                                                    html {
-                                                        min-height: 100vh;
-                                                    }
-                                                    
-                                                    body {
-                                                        background-image: linear-gradient(to bottom left, #0067b3, #40b0df, #ffd53d, #ffff02);
-                                                    }
-                                                    
-                                                    header {
-                                                        display: flex;
-                                                        justify-content: center;
-                                                        font-family: 'customFont';
-                                                    }
-                                                    
-                                                    .gameControlsContainer {
-                                                        grid-column: 1/-1;
-                                                        display: flex;
-                                                        justify-content: space-evenly;
-                                                        position: relative;
-                                                    }
-                                                    
-                                                    #timer {
-                                                        background-color: white;
-                                                        height: 2rem width: 120px;
-                                                        margin: 3px;
-                                                        border-radius: 4px;
-                                                        border-color: black;
-                                                        border-width: medium;
-                                                        justify-content: center;
-                                                    }
-                                                    
-                                                    .cardContainer {}
-                                                    
-                                                    .card {
-                                                        /* position: relative; */
-                                                        /* background-color: blue; */
-                                                        height: 90px;
-                                                        width: 60px;
-                                                        border-radius: 10px;
-                                                        /* border-color: black;
-                                    border-width: medium; */
-                                                    }
-                                                    /* .cardBack {
-        z-index: 0;
+* {
+    box-sizing: border-box;
+}
+
+@font-face {
+    font-family: 'customFont';
+    src: url('./assets/fonts/beautyMountains.ttf');
+}
+
+html,
+body {
+    padding: 0;
+    margin: 0;
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+html {
+    min-height: 100vh;
+}
+
+body {
+    background-image: linear-gradient(to bottom left, #0067b3, #40b0df, #ffd53d, #ffff02);
+}
+
+header {
+    display: flex;
+    justify-content: center;
+    font-family: 'customFont';
+}
+
+.gameControlsContainer {
+    display: flex;
+    justify-content: center;
+}
+
+.gameControls {
+    display: flex;
+    justify-content: space-evenly;
+    width: 290px;
+}
+
+#timer {
+    background-color: white;
+    height: 2rem width: 120px;
+    margin: 3px;
+    border-radius: 4px;
+    border-color: black;
+    border-width: medium;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    width: 85px;
+}
+
+.gameContainer {
+    display: flex;
+    justify-content: center;
+}
+
+.cardContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    /* width: 100vw; */
+    height: 300px;
+    width: 290px;
+}
+
+.card {
+    position: relative;
+    /* background-color: blue; */
+    height: 90px;
+    width: 60px;
+    border-radius: 4px;
+    padding: 4px;
+    border-color: black;
+    border-width: medium;
+    transform: scale(.45);
+}
+
+.cardFace {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    border-radius: 6px;
+}
+
+.cardBack {
+    z-index: 1;
+}
+
+.cardFront {
+    z-index: 0;
+}
+
+.cardFace:hover {
+    transform: scale(1.05);
+}
+
+
+/* ------CARD FLIP ----------
+
+.cardFace:hover {
+    transform: scale(.95);
+}
+
+.cardFace {
+    backface-visibility: hidden;
+}
+
+.cardFront {
+    transform: rotateX(180deg);
+}
+
+.card.visible .cardBack {
+    transform: rotateY(-180deg);
+}
+
+.card.visible .cardFront {
+    transform: rotateY(0);
+}
+
+------CARD FLIP ---------- */
+
+
+/* .row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 85%;
+    margin: 8px;
+}
+
+.column {
+    flex-basis: 100%;
+} */
+
+button {
+    display: inline-block;
+    padding: 0.4em .6em;
+    margin: 0 0.3em 0.3em 0;
+    border-radius: 0.45em;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-weight: 400;
+    color: black;
+    background-color: white;
+    box-shadow: inset 0 -0.6em 0 -0.35em rgba(0, 0, 0, 0.17);
+    text-align: center;
+    position: relative;
+}
+
+button:active {
+    top: 0.1em;
+}
+
+@media all and (max-width:30em) {
+    button {
+        display: block;
+        margin: 0.4em auto;
     }
-    
-    .cardFront {
-        z-index: 1;
-    } */
-                                                    
-                                                    .row {
-                                                        display: flex;
-                                                        flex-direction: row;
-                                                        flex-wrap: wrap;
-                                                        width: 85%;
-                                                        margin: 8px;
-                                                    }
-                                                    
-                                                    .column {
-                                                        flex-basis: 100%;
-                                                    }
-                                                    
-                                                    button {
-                                                        display: inline-block;
-                                                        padding: 0.4em .6em;
-                                                        margin: 0 0.3em 0.3em 0;
-                                                        border-radius: 0.45em;
-                                                        box-sizing: border-box;
-                                                        text-decoration: none;
-                                                        font-family: 'Roboto Condensed', sans-serif;
-                                                        font-weight: 400;
-                                                        color: black;
-                                                        background-color: white;
-                                                        box-shadow: inset 0 -0.6em 0 -0.35em rgba(0, 0, 0, 0.17);
-                                                        text-align: center;
-                                                        position: relative;
-                                                    }
-                                                    
-                                                    button:active {
-                                                        top: 0.1em;
-                                                    }
-                                                    
-                                                    @media all and (max-width:30em) {
-                                                        button {
-                                                            display: block;
-                                                            margin: 0.4em auto;
-                                                        }
-                                                    }
-                                                    
-                                                    @media only screen and (min-width:768px) {
-                                                        h1 {
-                                                            font-size: 2.5rem;
-                                                        }
-                                                        .card {
-                                                            height: 180px;
-                                                            width: 120px;
-                                                        }
-                                                        .row {
-                                                            width: 70%;
-                                                            margin: 16px;
-                                                        }
-                                                        .column {
-                                                            flex: 1;
-                                                            justify-content: center;
-                                                        }
+}
+
+@media only screen and (min-width:768px) {
+    h1 {
+        font-size: 2.5rem;
+    }
+    .gameControls {
+        width: 600px;
+    }
+    .cardContainer {
+        height: 700px;
+        width: 600px;
+    }
+    .card {
+        height: 190px;
+        width: 140px;
+        padding: 10px;
+        transform: scale(1);
+    }
+}
